crates/textual-rs/tests/snapshots/widget_tests__snapshot_footer_empty.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"  Tab  Focus   Ctrl+P  Palette   q  Quit"
