crates/textual-rs/tests/snapshots/widget_tests__snapshot_header_title_subtitle.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"             My App -- v1.0             "
