crates/textual-rs/tests/snapshots/widget_tests__snapshot_label_default.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"Hello               "
"                    "
"                    "
