crates/textual-rs/tests/snapshots/widget_tests__snapshot_list_view.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"Item 0              "
"Item 1              "
"Item 2              "
"Item 3              "
"Item 4              "
