crates/textual-rs/tests/snapshots/widget_tests__snapshot_log.snap
---
source: crates/textual-rs/tests/widget_tests.rs
assertion_line: 1551
expression: "format!(\"{}\", test_app.backend())"
---
"Line 0              "
"Line 1             ▆"
"Line 2              "
